# oauth-framework

./: .env.example  .gitignore  Dockerfile.as  Makefile  README.md  docker-compose.yaml  migrate.py  pyproject.toml
.github/workflows/: qa.yml
alembic/: env.py
alembic/versions/: 1065640c0eef_add_authorization_code_table.py  73d71c913c37_initial_schema.py  8515712e5250_add_deactivated_at_to_signing_keys.py
scripts/: migrate.ps1  migrate.sh  register_client.py  rotate_keys.py  worker.py
src/: config.py  gunicorn_conf.py  main_as.py
src/core/: database.py  redis.py  security.py
src/exceptions/: __init__.py  invalid_scope_exception.py
src/models/: __init__.py  client.py  keys.py  token.py  user.py
src/repositories/: authorization_code_repo.py  client_repo.py  key_repo.py  token_repo.py  user_repo.py
src/routers/: oauth.py  user.py  well_knonw.py
src/schemas/: health_schema.py  user_schemas.py
src/services/: key_manager.py  key_service.py  oauth_service.py  token_service.py
tests/integration/: test_user_registration.py
tests/unit/: test_authorization_code_repository.py  test_client_repository.py  test_database.py  test_key_manager.py  test_key_repository.py  test_key_service.py  test_main.py  test_oauth_router.py  test_oauth_service.py  test_redis.py  test_security.py  test_token_repository.py  test_token_service.py  test_user_repository.py  test_user_router.py  test_well_known_router.py
