[project]
name = "oauth-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco Henriques",email = "48632339+FMIFH@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)",
    "ruff (>=0.15.22,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
files = ["api", "tests"]
namespace_packages = true
explicit_package_bases = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 110


[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "I"]
ignore = ["C408", "N815"]
fixable = ["ALL"]
